--- a/app/templates/@layout.printout.latte
+++ b/app/templates/@layout.printout.latte
@@ -16,6 +16,7 @@
     <link href="{$basePath}/css/plugins/toastr/toastr.min.css" rel="stylesheet">
     
     <script src="{$basePath}/js/jquery-2.2.3.js"></script>
+    <script src="{$basePath}/js/main.js"></script>
     <style>
         body {
             background-color: transparent;
