tisk a pamatování intervalů
ukládání centra výsledku a správné počítaní při tisku sum center, při
změně týdne se hodnoty pamatují napříč aplikací

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -42,7 +42,7 @@
 	                    <div class="logo-element">SKT</div>
 	                </li>
 	                <li n:class="$presenter->isLinkCurrent('Result:*') ? active">
-	                    <a n:href="Result:setter, $this_week, $this_year" title="Výsledky"><i class="fa fa-th-large"></i><span class="nav-label">Výsledky</span><span class="fa arrow"></span></a>
+	                    <a n:href="Result:setter, $setter_week, $setter_year" title="Výsledky"><i class="fa fa-th-large"></i><span class="nav-label">Výsledky</span><span class="fa arrow"></span></a>
 	                </li>
 	                <li n:class="$presenter->isLinkCurrent('Person:*') ? active">
 	                    <a n:href="Person:list" title="Osoby"><i class="fa fa-child"></i><span class="nav-label">Osoby</span><span class="fa arrow"></span></a>
