--- a/app/templates/@layout.printout.latte
+++ b/app/templates/@layout.printout.latte
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{block title|striptags}{/block} | SKT Score</title>
+    <title>{block title|striptags}{/block}</title>
 
     <link href="{$basePath}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{$basePath}/font-awesome/css/font-awesome.css" rel="stylesheet">
