--- a/app/templates/Result/booksOverview.latte
+++ b/app/templates/Result/booksOverview.latte
@@ -19,11 +19,11 @@
                     <div class="ibox-title modified" style="overflow:auto;">
                         <div class="week-input-container">
                             <label class="control-label tiny-label" for="week_from_input">od</label>
-            				<input id="week_from_input" class="form-control week-input" onkeydown="return false"/>
+            				<input id="week_from_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
                         </div>
                         <div class="week-input-container">
                             <label class="control-label tiny-label" for="week_to_input">do</label>
-                            <input id="week_to_input" class="form-control week-input" onkeydown="return false"/>
+                            <input id="week_to_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
                         </div>
                     </div>
                     
