--- a/app/templates/Result/layout.latte
+++ b/app/templates/Result/layout.latte
@@ -3,11 +3,11 @@
 	<div class="row wrapper border-bottom white-bg page-heading">
 	    <div class="col-lg-10">
 	        <h2 n:block="title">Výsledky</h2>
-            <ol class="breadcrumb">
-                <li n:class="$presenter->isLinkCurrent('Result:setter') ? active"><a n:href="Result:setter">Zadávání</a></li>
+            <ol class="breadcrumb" n:snippet="resultsNavigation">
+                <li n:class="$presenter->isLinkCurrent('Result:setter') ? active"><a n:href="Result:setter, $setter_week, $setter_year">Zadávání</a></li>
                 <li n:if="$user->isInRole('superadmin') || $user->id == 5" n:class="$presenter->isLinkCurrent('Result:importSkpn') ? active"><a n:href="Result:importSkpn">Import z SKPN</a></li>
-                <li n:class="$presenter->isLinkCurrent('Result:personsOverview') ? active"><a n:href="Result:personsOverview, $this_week, $this_year, $this_week, $this_year">Osoby</a></li>
-                <li n:class="$presenter->isLinkCurrent('Result:booksOverview') ? active"><a n:href="Result:booksOverview, $this_week, $this_year, $this_week, $this_year">Knihy</a></li>
+                <li n:class="$presenter->isLinkCurrent('Result:personsOverview') ? active"><a n:href="Result:personsOverview, $week_from, $year_from, $week_to, $year_to">Osoby</a></li>
+                <li n:class="$presenter->isLinkCurrent('Result:booksOverview') ? active"><a n:href="Result:booksOverview, $week_from, $year_from, $week_to, $year_to">Knihy</a></li>
             </ol>
 	    </div>
 	</div>
