--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -131,6 +131,13 @@ ol.breadcrumb li.active {
 	
 	.panel-group {
 		margin-bottom: 0;
+		
+		.panel-default.float {
+			float: left;
+			margin-top: 0px;
+			margin-right: 5px;
+			margin-bottom: 5px;
+		}
 	}
 
 	.panel-filler {
