--- a/app/templates/Result/booksOverview.latte
+++ b/app/templates/Result/booksOverview.latte
@@ -40,7 +40,7 @@
                         </div>
                         {snippet overviewTable}
                         {if count($centers_distribution) == 0}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable">
                             <thead>
                                 <tr>
                                     <th class="wide noselect" data-sort-ignore="true">Titul</th>
@@ -56,7 +56,7 @@
                             </tbody>
                         </table>
                         {else}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999">
                             <thead>
                                 <tr>
                                     <th class="wide noselect">Titul</th>
@@ -78,7 +78,7 @@
                                             <div class="panel-group" id="accordion-{$book->id}">
                                                 {foreach $centers as $center}
                                                 {continueIf empty($centers_distribution[$book->id][$center->id])}
-                                                <div class="panel panel-default">
+                                                <div class="panel panel-default float">
                                                     <div class="panel-heading">
                                                         <h5 class="panel-title">
                                                             <a data-toggle="collapse" data-parent="#accordion-{$center->id}" href="#collapseCenter-{$center->id}">{$center->title}</a>
@@ -86,21 +86,19 @@
                                                     </div>
                                                     <div id="collapseCenter-{$center->id}" class="panel-collapse collapse in">
                                                         <div class="panel-body">
-                                                            {dump $book_distribution[$book->id]}
+	                                                        <table class="result-detail">
                                                             {if isset($book_distribution[$book->id][$center->id])}
                                                             {foreach $book_distribution[$book->id][$center->id] as $person_distribution}
                                                                 {var $person = $persons[$person_distribution['person_id']]}
-                                                                <table class="result-detail">
-                                                                    <tr><th>{$person->name}</th><td>{$person_distribution['quantity']}</td></tr>
-                                                                </table>
+                                                                <tr><th>{$person->name}</th><td>{$person_distribution['quantity']}</td></tr>
                                                             {/foreach}
+                                                            </table>
                                                             {/if}
                                                         </div>
                                                     </div>
                                                 </div>
                                                 {/foreach}
                                             </div>
-                                            <p class="panel-filler">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                         </div>
                                     {/form}
                                     </td>
@@ -111,11 +109,6 @@
                                     <td colspan="2">TOTAL</td>
                                     <td n:foreach="$centers as $center">{isset($centers_sum_distribution[$center->id]) ? $centers_sum_distribution[$center->id] : "0"}</td>
                                     <td>{$allsum_books}</td>
-                                </tr>
-                                <tr>
-                                    <td colspan="10">
-                                        <ul class="pagination pull-right"></ul>
-                                    </td>
                                 </tr>
                             </tfoot>
                         </table>
