--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -40,7 +40,7 @@
                         </div>
                         {snippet overviewTable}
                         {if count($category_distribution) == 0}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table empty" id="overviewTable" data-page-size="99999999999">
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table empty" id="overviewTable">
                             <thead>
                                 <tr>
                                     <th class="noselect" data-sort-ignore="true" data-sorted="false"></th>
@@ -62,7 +62,7 @@
                             </tbody>
                         </table>
                         {else}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999" >
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999">
                             <thead>
                                 <tr>
                                     <th class="noselect" data-sort-ignore="true" data-sorted="false"></th>
