--- a/app/templates/Country/layout.latte
+++ b/app/templates/Country/layout.latte
@@ -2,10 +2,10 @@
 {block main}
 	<div class="row wrapper border-bottom white-bg page-heading">
 	    <div class="col-lg-10">
-	        <h2 n:block="title">Centra</h2>
+	        <h2 n:block="title">Státy</h2>
             <ol class="breadcrumb">
-                <li n:class="$presenter->isLinkCurrent('Center:add') ? active"><a n:href="Center:add">Přidat</a></li>
-                <li n:class="$presenter->isLinkCurrent('Center:list') ? active"><a n:href="Center:list">Přehled</a></li>
+                <li n:class="$presenter->isLinkCurrent('Country:add') ? active"><a n:href="Country:add">Přidat</a></li>
+                <li n:class="$presenter->isLinkCurrent('Country:list') ? active"><a n:href="Country:list">Přehled</a></li>
             </ol>
 	    </div>
 	</div>
