--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -5,6 +5,7 @@
     <link href="{$basePath}/css/plugins/dataTables/dataTables.responsive.css" rel="stylesheet">
     <link href="{$basePath}/css/plugins/dataTables/dataTables.tableTools.min.css" rel="stylesheet">
     <link href="{$basePath}/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+    <link href="{$basePath}/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
     
     <!-- FooTable -->
     <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
@@ -13,6 +14,51 @@
     <link href="{$basePath}/css/scoretable-print.css?v=1.0" rel="stylesheet" media="print">
 {/block}
 {block content}
+            {form chooseCentersForm}
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ibox ollapsed float-e-margins">
+                        <div class="ibox-title">
+                            <h5>Centra</h5>
+                            <div class="ibox-tools">
+                                <a class="collapse-link">
+                                    <i class="fa fa-chevron-up"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="ibox-content">
+                            <div class="panel-body">
+                            {dump $centers}
+                                <div class="panel-group" id="accordion" style="margin-bottom: 10px">
+                                {foreach $centers_group as $center_group}
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <h5 class="panel-title">
+                                                <a data-parent="#accordion">{$center_group->country->title}</a>
+                                            </h5>
+                                        </div>
+                                        <div id="collapseState-{$center_group->country_id}" class="panel-collapse collapse in">
+                                            <div class="panel-body">
+                                                {foreach $centers[$center_group->country_id] as $center}
+                                                    <div class="checkbox checkbox-primary">
+                                                        <input type="checkbox" n:name="centers: $center['center']->id" value="{$center['center']->id}" id="center_{$center['center']->id}" n:attr="checked => $center['checked']">
+                                                        <label for="center_{$center['center']->id}">
+                                                            {$center['center']->title}
+                                                        </label>
+                                                    </div>
+                                                {/foreach}
+                                            </div>
+                                        </div>
+                                    </div>
+                                {/foreach}
+                                </div>
+                                {input save, class => "btn btn-primary submit"}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {/form}
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
@@ -79,6 +125,7 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                {dump $category_distribution}
                                 <tr n:foreach="$persons as $person" n:if="isset($category_distribution[$person->id])" id="person-{$person->id}">
                                     {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
                                     <td>1</td>
