--- a/app/templates/components/form.latte
+++ b/app/templates/components/form.latte
@@ -32,6 +32,7 @@
 
 							{if $input instanceof Nette\Forms\Controls\SubmitButton}
 								{if ($presenter->getAction() == "edit" && $input->name == "edit") || $presenter->getAction() == "add" && $input->name == "add"}
+                                <div class="hr-line-dashed"></div>
 								<div n:class="form-group">
 									{label $input, class => "col-sm-2 control-label" /}
 									<div class="col-sm-4 col-sm-offset-2">
