--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -1,7 +1,7 @@
 {layout 'layout.latte'}
 {block head}
     <!-- FooTable -->
-    <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
+    <link href="{$basePath}/css/plugins/footable/footable.bootstrap.min.css" rel="stylesheet">
 
     <!-- Sweet Alert -->
     <link href="{$basePath}/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
@@ -13,18 +13,30 @@
                 <div class="ibox-title empty">
                 </div>
                 <div class="ibox-content">
-                    <table class="table table-striped table-bordered table-hover" id="personsTable" data-page-size="20" >
+                    <table class="table table-striped table-bordered table-hover" id="personsTable">
                         <thead>
                             <tr>
                                 <th class="wide noselect">Jméno</th>
                                 <th class="noselect">Centrum</th>
-                                <th data-sort-ignore="true" data-name="controls" class="controls"></th>
+                                <th data-filterable="false" class="noselect th-small" data-type="html">Aktivní</th>
+                                <th data-filterable="false" data-sortable="false" data-name="controls" class="controls"></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr n:foreach="$records as $record">
-                                <td>{$record->name}</td>
-                                <td>{isset($record->center->title) ? $record->center->title}</td>
+                                <td data-sort-value="{$record->name|webalize}">{$record->name}</td>
+                                <td data-sort-value="{isset($record->center->title) ? $record->center->title|webalize}">{isset($record->center->title) ? $record->center->title}</td>
+                                <td data-sort-value="{$record->active}">
+                                    <div class="switch active">
+                                        <div class="onoffswitch">
+                                            <input type="checkbox" n:attr="checked => $record->active == 1" onchange="change_person_activity({$record->id}, this.checked)" class="onoffswitch-checkbox" id="onoffswitch-person-{$record->id}">
+                                            <label class="onoffswitch-label" for="onoffswitch-person-{$record->id}">
+                                                <span class="onoffswitch-inner"></span>
+                                                <span class="onoffswitch-switch"></span>
+                                            </label>
+                                        </div>
+                                    </div>  
+                                </td>
                                 <td class="controls">
                                     <a class="row-edit" n:href="edit, $record->id"><span class="glyphicon glyphicon-edit"></span></a>
                                     <a class="row-delete" data-delete_name="{$record->name}" n:href="delete, $record->id"><span class="glyphicon glyphicon-remove"></span></a>
@@ -46,7 +58,7 @@
 {/block}
 {block scripts}
     <!-- FooTable -->
-    <script src="{$basePath}/js/plugins/footable/footable.all.min.js"></script>    
+    <script src="{$basePath}/js/plugins/footable2/footable.min.js"></script>    
     
     <!-- Sweet alert -->
     <script src="{$basePath}/js/plugins/sweetalert/sweetalert.min.js"></script>
@@ -56,5 +68,9 @@
         $(document).ready(function() {
             initFooTable('#personsTable', "Osoba byla smazána.", "Nelze smazat osobu dokud má přiřazené výsledky.");
         });
+
+        function change_person_activity(person_id, active) {
+            $.get({link setPersonActivity!}, {'person_id': person_id, 'active': active})
+        }
     </script>
 {/block}
