--- a/app/templates/Result/layout.latte
+++ b/app/templates/Result/layout.latte
@@ -8,6 +8,7 @@
                 <li n:if="$user->isInRole('superadmin') || $user->id == 5" n:class="$presenter->isLinkCurrent('Result:importSkpn') ? active"><a n:href="Result:importSkpn">Import z SKPN</a></li>
                 <li n:class="$presenter->isLinkCurrent('Result:personsOverview') ? active"><a n:href="Result:personsOverview, $week_from, $year_from, $week_to, $year_to">Osoby</a></li>
                 <li n:class="$presenter->isLinkCurrent('Result:booksOverview') ? active"><a n:href="Result:booksOverview, $week_from, $year_from, $week_to, $year_to">Knihy</a></li>
+                <li n:class="$presenter->isLinkCurrent('ResultSettings:showCenters') ? active"><a n:href="ResultSettings:showCenters">Nastavení</a></li>
             </ol>
 	    </div>
 	</div>
