--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -5,7 +5,6 @@
     <link href="{$basePath}/css/plugins/dataTables/dataTables.responsive.css" rel="stylesheet">
     <link href="{$basePath}/css/plugins/dataTables/dataTables.tableTools.min.css" rel="stylesheet">
     <link href="{$basePath}/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
-    <link href="{$basePath}/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
     
     <!-- FooTable -->
     <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
@@ -14,51 +13,6 @@
     <link href="{$basePath}/css/scoretable-print.css?v=1.0" rel="stylesheet" media="print">
 {/block}
 {block content}
-            {form chooseCentersForm}
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="ibox ollapsed float-e-margins">
-                        <div class="ibox-title">
-                            <h5>Centra</h5>
-                            <div class="ibox-tools">
-                                <a class="collapse-link">
-                                    <i class="fa fa-chevron-up"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="ibox-content">
-                            <div class="panel-body">
-                            {dump $centers}
-                                <div class="panel-group" id="accordion" style="margin-bottom: 10px">
-                                {foreach $centers_group as $center_group}
-                                    <div class="panel panel-default">
-                                        <div class="panel-heading">
-                                            <h5 class="panel-title">
-                                                <a data-parent="#accordion">{$center_group->country->title}</a>
-                                            </h5>
-                                        </div>
-                                        <div id="collapseState-{$center_group->country_id}" class="panel-collapse collapse in">
-                                            <div class="panel-body">
-                                                {foreach $centers[$center_group->country_id] as $center}
-                                                    <div class="checkbox checkbox-primary">
-                                                        <input type="checkbox" n:name="centers: $center['center']->id" value="{$center['center']->id}" id="center_{$center['center']->id}" n:attr="checked => $center['checked']">
-                                                        <label for="center_{$center['center']->id}">
-                                                            {$center['center']->title}
-                                                        </label>
-                                                    </div>
-                                                {/foreach}
-                                            </div>
-                                        </div>
-                                    </div>
-                                {/foreach}
-                                </div>
-                                {input save, class => "btn btn-primary submit"}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {/form}
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
@@ -184,12 +138,12 @@
                             <tfoot>
                                 <tr>
                                     <td colspan="4">TOTAL</td>
-                                    <td class="center bold">{isset($category_sum_distribution['Mahá']) ? $category_sum_distribution['Mahá'] : "0"}</td>
-                                    <td class="center bold">{isset($category_sum_distribution['Big']) ? $category_sum_distribution['Big'] : "0"}</td>
-                                    <td class="center bold">{isset($category_sum_distribution['Medium']) ? $category_sum_distribution['Medium'] : "0"}</td>
-                                    <td class="center bold">{isset($category_sum_distribution['Small']) ? $category_sum_distribution['Small'] : "0"}</td>
-                                    <td class="center bold">{isset($category_sum_distribution['Mag']) ? $category_sum_distribution['Mag'] : "0"}</td>
-                                    <td class="center bold">{$allsum_points}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Mahá'])}{$category_sum_distribution['Mahá']|number:0:'.':' '}{else}"0"{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Big'])}{$category_sum_distribution['Big']|number:0:'.':' '}{else}"0"{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Medium'])}{$category_sum_distribution['Medium']|number:0:'.':' '}{else}"0"{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Small'])}{$category_sum_distribution['Small']|number:0:'.':' '}{else}"0"{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Mag'])}{$category_sum_distribution['Mag']|number:0:'.':' '}{else}"0"{/if}</td>
+                                    <td class="center bold">{$allsum_points|number:2:'.':' '}</td>
                                 </tr>
                                 <tr>
                                     <td colspan="10">
